# sorostamp

./: .gitignore  DEMO.md  DEPLOY.md  MAINNET.md  README.md  next.config.ts  open-next.config.ts  package-lock.json  package.json  snarkjs.d.ts  wrangler.jsonc
app/: globals.css  layout.tsx  page.tsx
app/api/card/: route.tsx
app/api/dkim/: route.ts
app/api/og/: route.tsx
app/api/seal/: route.ts
app/app/: page.tsx
app/p/[id]/: page.tsx
circuits/: build-invoke-args.cjs  decode-subject.cjs  gen-body-fixtures.mjs  gen-body-input.mjs  gen-fixtures.mjs  gen-input.cjs  gen-vk.cjs  lacre.circom  measure.circom  package-lock.json  package.json  sorostamp.circom  sorostamp_body.circom  sorostamp_generic.circom  test-generic.mjs
components/: app-flow.tsx  landing.tsx  onboarding.tsx  primitives.tsx  seal.tsx  shell.tsx  verify.tsx
contracts/verifier/: Cargo.toml  README.md
contracts/verifier-body/: Cargo.toml
contracts/verifier-body/fixtures/bn254/: proof.json  public.json  verification_key.json
contracts/verifier-body/src/: lib.rs  sha256_resume.rs  test.rs  vk_bytes.rs
contracts/verifier/fixtures/bn254/: proof.json  public.json  verification_key.json
contracts/verifier/src/: lib.rs  test.rs
contracts/verifier/test_snapshots/proof_test/: budget_of_submit_proof.1.json  submit_seals_an_attestation_and_exposes_it.1.json  the_same_email_cannot_be_sealed_twice.1.json
lib/: data.ts  prove-body.ts  prove.ts  prove.worker.ts  soroban-client.ts  soroban.ts
scripts/: deploy-cf.sh
styles/: lacre.css  layout.css  tokens.css
(+2 files in other folders)
